--- a/css/styles.css
+++ b/css/styles.css
@@ -21,56 +21,85 @@
     font-style: normal;
 }
 body {
-    :root {
-        font-family: "Roboto", sans-serif;
-        second-family: "Raleway", sans-serif;
-        background: #fff;
+        font-family: Roboto, sans-serif;
+        background: #fffff;
         color:#434455 ;
+        font-weight: 400;
         }
-}
-a {
-    text-decoration: none;
+
+a {text-decoration: none;}
+    
     /* logo */
-    .Web { font-weight: 700;
+.logo {
+    font-weight: 700;
         font-size: 18px;
         line-height: 1.16667;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
         color: #4d5ae5;
-    }
-    .Studio {font-weight: 700;
+        font-family: "Raleway", sans-serif
+}
+/* <span class="studio-word">Studio</span> */
+
+
+    .studio {
+         font-weight: 700;
         font-size: 18px;
         line-height: 1.16667;
-        color: #2e2f42;}
-}
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #2e2f42;
+        font-family: "Raleway", sans-serif
+    }
+
 /* Top line */
+.link-contact {
+    font-style: normal
+}
+
 .link {
     color: #2E2F42;
     font-size: 16px;
     line-height: 1.5;
+    font-weight: 500;
+    letter-spacing: 0.02em;
 }
-.link:hover { color: #404BBF;}
-.link:active {
-    color: #404BBF;
-}
+.link:hover { color: #404bbf;}
+.link:active { color: #404BBF; }
 .info {color: #434455;
-font-size: 16px;
+    font-size: 16px;
+    line-height: 1.5;
+     letter-spacing: 0.02em;
 }
 .info:hover { color: #404BBF;
 }
-
+.info:focus {
+    color: #404bbf;
+}
 /* hero images */
+
 .hero-images {background: #2e2f42;
-width: 1440px;
+    width: 1440px;
     height: 600px;}
+
 .button-link {
-background: #4D5AE5;
-color: #FFFFFF
+background: #2e2f42;
+color: #FFFFFF;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em
 } 
 
 /* Button */
-.button-link:hover {background: #404BBF;
+.button-link:hover {
+    background: #404BBF;
     color: #FFFFFF;}
     .button-link {cursor: pointer;
-    background: #4d5ae5;}
+    background: #4d5ae5;
+}
+.button-link:focus { background-color: #404BBF }
 
     /* section our-team */
 
@@ -81,30 +110,45 @@ color: #FFFFFF
     font-size: 56px;
     line-height: 1.07143;
     color: #fff;
+    line-height: 1.07143;
+    letter-spacing: 0.02em;
+    text-align: center;
 
 }
 
-    h3 {font-weight: 500;
+    .name-main-info {font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         color: #2e2f42;
+        letter-spacing: 0.02em
 }
-    p {font-weight: 400;
+    .link-section-2 { font-weight: 400;
         font-size: 16px;
-    line-height: 1.5;
-    color: #434455;}
+        line-height: 1.5;
+        color: #434455;
+        letter-spacing: 0.02em
+}
 
-        h2 {font-weight: 700;
-            font-size: 36px;
-            line-height: 1.11111;
-            color: #2e2f42;
-        }
-        .footer {background: #2e2f42;}
-        .footer-text {color: #f4f4fd;}
-.Studio-footer {
+.name-our-team {
     font-weight: 700;
+    font-size: 36px;
+     line-height: 1.11;
+     color: #2e2f42;
+     letter-spacing: 0.02em;
+     text-align: center;
+    text-transform: capitalize
+    }
+    
+    .footer {background: #2e2f42;}
+    .footer-text {color: #f4f4fd;}
+    .web-footer {
+        font-weight: 700;
         font-size: 18px;
         line-height: 1.16667;
-        color: #f4f4fd;
+         letter-spacing: 0.03em;
+          text-transform: uppercase;color: #f4f4fd;
+          font-family: "Raleway", sans-serif;
+   
+
 }
-                color: #f4f4fd;
+             
