--- a/css/styles.css
+++ b/css/styles.css
@@ -118,13 +118,13 @@ letter-spacing: 0.04em
 /* section 2 main information */
 
 .main-info-section {background-color: #FFFFFF}
-
 .name-main-info {font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         color: #2e2f42;
         letter-spacing: 0.02em
 }
+.list-main { background-color: #FFFFFF}
 .link-section-2 { font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
