--- a/css/styles.css
+++ b/css/styles.css
@@ -80,8 +80,7 @@ a {text-decoration: none;}
 /* hero images */
 
 .hero-images {background: #2e2f42;
-    width: 1440px;
-    height: 600px;}
+    }
 
 .button-link {
 background: #2e2f42;
